<resources>
    <string name="app_name">Upcoming Movies</string>
    <string name="movie_rating_format">(%1$.2f)</string>
    <string name="textView_movie_release_date_label">Release Date</string>
    <string name="textView_movie_rating_label">User Rating</string>
    <string name="textView_movie_overview_label">Overview</string>
    <string name="textView_movie_title_label">Title</string>
    <string name="textView_similar_movies_label">Similar Movies</string>
    <string name="loading_state_text">Loading…</string>
    <string name="failed_to_load_movies">Failed to load movies</string>
    <string name="movies_not_available">There are no movies available</string>
    <string name="failed_to_load_movie_details">Failed to load movie details. Please try again later.</string>
</resources>
