<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_default_elevation"
        app:cardCornerRadius="@dimen/card_default_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/card_default_paddingHorizontal"
            android:paddingTop="@dimen/card_default_paddingVertical"
            android:paddingRight="@dimen/card_default_paddingHorizontal"
            android:paddingBottom="@dimen/card_default_paddingVertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_movie_title_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textViewMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_text_marginBottom"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_movie_release_date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textViewMovieReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_text_marginBottom"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_movie_rating_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textViewMovieVoteAverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_text_marginBottom"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_movie_overview_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textViewMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearance" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSimilarMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_default_elevation"
        app:cardCornerRadius="@dimen/card_default_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/card_default_paddingHorizontal"
            android:paddingTop="@dimen/card_default_paddingVertical"
            android:paddingRight="@dimen/card_default_paddingHorizontal"
            android:paddingBottom="@dimen/card_default_paddingVertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_similar_movies_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSimilarMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>